feat(fonologi): add new intro each units

--- a/material.html
+++ b/material.html
@@ -43,7 +43,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <a href="unit-1.html" class="text-black">
-                        <div class="card h-500">
+                        <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Unit 1 Perkenalan</h3>
                                 <p class="card-text">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="unit-2.html" class="text-black">
-                        <div class="card h-500">
+                        <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Unit 2 Pekerjaan</h3>
                                 <p class="card-text">
@@ -89,7 +89,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="unit-3.html" class="text-black">
-                        <div class="card h-500">
+                        <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Unit 3 Hari dan Tanggal</h3>
                                 <p class="card-text">
@@ -109,7 +109,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="unit-4.html" class="text-black">
-                        <div class="card h-500">
+                        <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Unit 4 Keluarga</h3>
                                 <p class="card-text">
@@ -131,7 +131,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <a href="unit-5.html" class="text-black">
-                        <div class="card h-600">
+                        <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Unit 5 Kegiatan Sehari-hari</h3>
                                 <p class="card-text">
@@ -155,7 +155,7 @@
                 </div>
                 <div class="col-md-3">
                     <a href="unit-6.html" class="text-black">
-                        <div class="card h-600">
+                        <div class="card">
                             <div class="card-body">
                                 <h3 class="card-title">Unit 6 Kegemaran</h3>
                                 <p class="card-text">
@@ -178,7 +178,7 @@
                     </a>
                 </div>
                 <div class="col-md-3">
-                    <div class="card h-600">
+                    <div class="card">
                         <div class="card-body">
                             <h3 class="card-title">Unit 7 Lingkungan Sekitar</h3>
                             <p class="card-text">
@@ -198,7 +198,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card h-600">
+                    <div class="card">
                         <div class="card-body">
                             <h3 class="card-title">Unit 8 Liburan</h3>
                             <p class="card-text">
