--- a/unit-1.html
+++ b/unit-1.html
@@ -42,6 +42,27 @@
     </div>
     <section id="unit-1">
         <div class="container mt-100">
+            <div id="intro">
+                <h2 class="text-center">Sapaan dan Perkenalan<br>인사말 및 소개</h2>
+                <p class="fw-600">Halo sahabat BIPA<br>안녕 BIPA 친구들</p>
+                <figure class="text-center">
+                    <img class="text-center" src="assets/images/unit-1/intro.png" alt="" style="height: auto; width: 100%;">
+                    <figcaption>sumber: canva.com</figcaption>
+                </figure>
+                <p>
+                    Kita akan memulai perkenalan dengan sapaan. Sapaan dalam bahasa Indonesia digunakan dalam beberapa situasi, yaitu formal dan informal. Anda bisa menggunakan sapaan “hai” dalam situasi informal dan “selamat siang” dalam situasi formal.
+                    <br>
+                    인사말로 소개를 시작하겠습니다. 인도네시아어로 인사하는 방법은 격식을 차린 경우와 비공식적인 경우 등 여러 가지 상황에서 사용됩니다. 비공식적인 상황에서는 “hai” 를 사용할 수 있고, 공식적인 상황에서는 “좋은 아침이에요” 을 사용할 수 있습니다.
+                    <br><br>
+                    Perkenalan diri biasanya berisi nama, umur, asal, dan pekerjaan.
+                    <br>
+                    자기소개에는 일반적으로 이름, 나이, 출신, 직업 등이 포함됩니다.
+                    <br><br>
+                    Dalam unit ini Anda akan mengetahui kosakata tentang sapaan dan perkenalan, latihan membedakan bunyi dari kata yang mirip di bagian pasangan minimal, dan akan berlatih memperkenalkan diri.
+                    <br>
+                    이 단원에서는 인사말과 소개의 어휘를 알고, 최소한의 쌍으로 비슷한 단어의 소리를 구별하는 연습을 하고, 자신을 소개하는 연습을 하게 됩니다.
+                </p>
+            </div>
             <div id="activity-1">
                 <div>
                     <h3 class="text-left mb-20">
@@ -54,7 +75,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="card card-unit h-300 text-center" onclick="act11()">
+                        <div class="card card-unit text-center" onclick="act11()">
                             <div class="card-body">
                                 <h3 class="card-title">Salam Pembuka</h3>
                                 <p class="card-text">
@@ -70,7 +91,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card card-unit h-300 text-center" onclick="act12()">
+                        <div class="card card-unit text-center" onclick="act12()">
                             <div class="card-body">
                                 <h3 class="card-title">Ungkapan Sapaan</h3>
                                 <p class="card-text">
@@ -90,7 +111,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card card-unit h-300 text-center" onclick="act13()">
+                        <div class="card card-unit text-center" onclick="act13()">
                             <div class="card-body">
                                 <h3 class="card-title">Ungkapan Maaf</h3>
                                 <p class="card-text">
@@ -106,7 +127,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="card card-unit h-250 text-center" onclick="act14()">
+                        <div class="card card-unit text-center" onclick="act14()">
                             <div class="card-body">
                                 <h3 class="card-title">Ungkapan Terima Kasih</h3>
                                 <p class="card-text">
@@ -120,7 +141,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card card-unit h-250 text-center" onclick="act15()">
+                        <div class="card card-unit text-center" onclick="act15()">
                             <div class="card-body">
                                 <h3 class="card-title">Salam Penutup</h3>
                                 <p class="card-text">
@@ -130,7 +151,7 @@
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="card card-unit h-250 text-center" onclick="act16()">
+                        <div class="card card-unit text-center" onclick="act16()">
                             <div class="card-body">
                                 <h3 class="card-title">Perkenalan</h3>
                                 <p class="card-text">
