--- a/unit-2.html
+++ b/unit-2.html
@@ -42,6 +42,23 @@
     </div>
     <section id="unit-2">
         <div class="container mt-100">
+            <div id="intro">
+                <h4>Sapaan dan Perkenalan<br>인사말 및 소개</h4>
+                <p>Halo sahabat BIPA<br>안녕 BIPA 친구들</p>
+                <figure class="text-center">
+                    <img class="text-center" src="assets/images/unit-2/intro.png" alt="" style="height: auto; width: 100%;">
+                    <figcaption>sumber: canva.com</figcaption>
+                </figure>
+                <p>
+                    Pada kesempatan kali ini, kita akan mempelajari kosakata dan ungkapan yang berkaitan dengan pekerjaan.
+                    <br>
+                    이번 시간에는 일과 관련된 어휘와 표현을 공부해보겠습니다.
+                    <br><br>
+                    Kita juga akan berlatih membedakan bunyi kata yang mirip melalui pasangan minimal, dan akan berlatih dengan tongue twister, kalimat sederhana, kalimat kompleks, dan percakapan tentang pekerjaan. Latihan ini akan membantu Anda memahami dan menggunakan kosakata serta ungkapan tentang pekerjaan dengan lebih baik.
+                    <br>
+                    또한 최소쌍을 통해 유사한 단어의 소리를 구별하는 연습을 하고, 텅 트위스터, 간단한 문장, 복잡한 문장, 일에 관한 대화를 연습합니다. 이 연습은 업무에 관한 어휘와 표현을 더 잘 이해하고 사용하는 데 도움이 될 것입니다.
+                </p>
+            </div>
             <div id="activity-1">
                 <div>
                     <h3 class="text-left mb-20">
