--- a/unit-3.html
+++ b/unit-3.html
@@ -42,6 +42,23 @@
     </div>
     <section id="unit-3">
         <div class="container mt-100">
+            <div id="intro">
+                <h4>Selamat Datang di Unit Hari dan Tanggal!<br>일일 및 날짜 수업에 오신 것을 환영합니다!</h4>
+                <p>Halo Sahabat BIPA!<br>안녕하세요 BIPA 친구들!</p>
+                <figure class="text-center">
+                    <img class="text-center" src="assets/images/unit-3/intro.png" alt="" style="height: auto; width: 100%;">
+                    <figcaption>sumber: canva.com</figcaption>
+                </figure>
+                <p>
+                    Pada kesempatan kali ini, kita akan mempelajari hari dan tanggal dalam bahasa Indonesia. Memahami cara menyebutkan hari dan tanggal dengan tepat. Anda juga akan belajar melafalkan nama-nama bulan dalam bahasa Indonesia.
+                    <br>
+                    이번 기회에 인도네시아어로 요일과 날짜를 공부해보겠습니다. 요일과 날짜를 올바르게 말하는 방법을 이해합니다. 또한 인도네시아어로 달 이름을 발음하는 방법도 배우게 됩니다.
+                    <br><br>
+                    Selain itu Anda juga akan belajar membedakan bunyi kata yang mirip pada bagian pasangan minimal dan berlatih melafalkan kalimat sederhana dan kompleks tentang hari dan tanggal.
+                    <br>
+                    그 외에도 비슷한 단어들의 소리를 최소한의 쌍으로 구별하는 방법과 요일과 날짜에 관한 단순하고 복잡한 문장을 발음하는 연습도 배우게 됩니다.
+                </p>
+            </div>
             <div id="activity-1">
                 <div>
                     <h3 class="text-left mb-20">
