--- a/unit-4.html
+++ b/unit-4.html
@@ -42,6 +42,26 @@
     </div>
     <section id="unit-4">
         <div class="container mt-100">
+            <div id="intro">
+                <h4>Selamat Datang di Unit Keluarga!<br>가족 레슨에 오신 것을 환영합니다!</h4>
+                <p>Halo Sahabat BIPA!<br>안녕하세요 BIPA 친구들!</p>
+                <figure class="text-center">
+                    <img class="text-center" src="assets/images/unit-4/intro.png" alt="" style="height: auto; width: 100%;">
+                </figure>
+                <p>
+                    Pada kesempatan kali ini, kita akan mempelajari kosakata dan ungkapan yang berkaitan dengan keluarga dalam bahasa Indonesia. Memahami kosakata tentang keluarga sangat penting karena membantu kita berbicara tentang anggota keluarga dan hubungan di antara mereka.
+                    <br>
+                    이번 시간에는 인도네시아어로 가족과 관련된 어휘와 표현을 공부하겠습니다. 가족 어휘를 이해하는 것은 가족 구성원과 가족 간의 관계에 대해 이야기하는 데 도움이 되기 때문에 매우 중요합니다.
+                    <br><br>
+                    Dalam unit ini Anda akan belajar panggilan keluarga secara umum, tetapi perlu Anda ketahui panggilan untuk keluarga di Indonesia cukup beragam sesuai dengan suku masing-masing. 
+                    <br>
+                    Contoh panggilan “Ibu” pada suku Batak Toba adalah “Oma” dan “Ayah” adalah “Bapa”.
+                    <br>
+                    이 단원에서는 일반적인 가족 소명을 배우게 되지만, 인도네시아에서 가족의 소명은 각 부족에 따라 매우 다양하다는 점을 알아야 합니다.
+                    <br>
+                    토바바탁족에서 "어머니"를 부르는 예는 “Oma"이고, "아버지"는 “Bapa"이다.
+                </p>
+            </div>
             <div id="activity-1">
                 <div>
                     <h3 class="text-left mb-20">
