--- a/unit-5.html
+++ b/unit-5.html
@@ -42,6 +42,26 @@
     </div>
     <section id="unit-2">
         <div class="container mt-100">
+            <div id="intro">
+                <h4>Selamat Datang di Unit Kegiatan Sehari-hari.<br>일일 활동 수업에 오신 것을 환영합니다.</h4>
+                <p>Halo Sahabat BIPA.<br>안녕하세요 BIPA 친구들.</p>
+                <figure class="text-center">
+                    <img class="text-center" src="assets/images/unit-5/intro.png" alt="" style="height: auto; width: 100%;">
+                </figure>
+                <p>
+                    Pada kesempatan kali ini, kita akan mempelajari kegiatan sehari-hari dalam bahasa Indonesia. Memahami kegiatan sehari-hari akan membantu Anda berkomunikasi lebih baik dalam bahasa Indonesia.
+                    <br>
+                    이번 시간에는 인도네시아어로 일상생활을 공부해보겠습니다. 일상 활동을 이해하면 인도네시아어로 더 잘 의사소통하는 데 도움이 됩니다. 
+                    <br><br>
+                    Kegiatan sehari-hari di Indonesia sangat bervariasi tergantung pada lokasi, pekerjaan, dan gaya hidup. Salah satu kegiatan sehari-hari yang dilakukan masyarakat Indonesia adalah “meronda”.
+                    <br>
+                    인도네시아의 일상 활동은 위치, 직업 및 생활 방식에 따라 크게 다릅니다. 인도네시아 사람들의 일상 활동 중 하나는 '순찰'입니다.
+                    <br><br>
+                    Pada kegiatan ini Anda akan belajar melafalkan kosakata tentang kegiatan sehari-hari, Anda juga akan berlatih membedakan bunyi dari kata yang mirip di bagian pasangan minimal.  Selain itu Anda juga akan melatih kelenturan lidah Anda dengan latihan tongue twister. Lalu Anda akan belajar melafalkan kalimat sederhana, kalimat kompleks, dan percakapan tentang kegiatan sehari-hari. 
+                    <br>
+                    이 활동에서는 일상 활동에 관한 어휘를 발음하는 방법을 배우고, 최소한의 쌍으로 유사한 단어의 소리를 구별하는 연습도 하게 됩니다. 그 외에도 텅 트위스터 운동을 통해 혀의 유연성을 단련할 수도 있습니다. 그런 다음 간단한 문장, 복잡한 문장, 일상 활동에 대한 대화를 발음하는 방법을 배우게 됩니다.
+                </p>
+            </div>
             <div id="activity-1">
                 <div>
                     <h3 class="text-left mb-20">
