--- a/unit-6.html
+++ b/unit-6.html
@@ -42,6 +42,22 @@
     </div>
     <section id="unit-2">
         <div class="container mt-100">
+            <div id="intro">
+                <h4>Selamat Datang di Unit Kegemaran!<br>즐겨찾는 강의에 오신 것을 환영합니다!</h4>
+                <p>Halo Sahabat BIPA!<br>안녕하세요 BIPA 친구들!</p>
+                <figure class="text-center">
+                    <img class="text-center" src="assets/images/unit-6/intro.png" alt="" style="height: auto; width: 100%;">
+                </figure>
+                <p>
+                    Pada kesempatan kali ini, kita akan mempelajari tentang kegemaran atau hobi dalam bahasa Indonesia. Kegemaran adalah aktivitas atau minat yang seseorang lakukan dalam waktu luangnya untuk bersenang-senang atau menyalurkan bakat. Memahami kosakata dan ungkapan tentang kegemaran akan membantu Anda berbicara tentang minat Anda dan bertanya tentang minat orang lain.
+                    <br>
+                    이번 기회에는 취미나 취미에 대해 인도네시아어로 배워보겠습니다. 취미는 개인이 여가 시간에 즐겁게 시간을 보내거나 자신의 재능을 발휘하기 위해 하는 활동이나 관심사입니다. 취미용 어휘와 표현을 이해하면 자신의 관심사에 대해 이야기하고, 다른 사람의 관심사에 대해 물어보는 데 도움이 됩니다.
+                    <br><br>
+                    Dalam unit ini Anda akan berlatih melafalkan kosakata yang berkaitan dengan kegemaran, berlatih membedakan bunyi kata yang mirip di bagian pasangan minimal. Kemudian berlatih melafalkan kalimat sederhana, kalimat kompleks, dan percakapan tentang kegemaran.
+                    <br>
+                    이 단원에서는 취미와 관련된 어휘를 발음하는 연습을 하고, 최소한의 쌍으로 유사한 단어의 소리를 구별하는 연습을 하게 됩니다. 그런 다음 간단한 문장, 복잡한 문장, 취미에 대한 대화를 발음하는 연습을 해보세요.
+                </p>
+            </div>
             <div id="activity-1">
                 <div>
                     <h3 class="text-left mb-20">
