feat(commit): create evaluation page

--- a/material.html
+++ b/material.html
@@ -178,48 +178,55 @@
                     </a>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3 class="card-title">Unit 7 Lingkungan Sekitar</h3>
-                            <p class="card-text">
-                            <ol type="a" class="px-3">
-                                <li>Pengenalan kosakata tentang lingkungan sekitar</li>
-                                <br>
-                                <li>Pasangan minimal tentang lingkungan sekitar</li>
-                                <br>
-                                <li>Kalimat <i>tongue twister</i></li>
-                                <br>
-                                <li>Kalimat sederhana tentang lingkungan sekitar</li>
-                                <br>
-                                <li>Kalimat kompleks tentang lingkungan sekitar</li>
-                            </ol>
-                            </p>
+                    <a href="unit-7.html" class="text-black">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3 class="card-title">Unit 7 Lingkungan Sekitar</h3>
+                                <p class="card-text">
+                                <ol type="a" class="px-3">
+                                    <li>Pengenalan kosakata tentang lingkungan sekitar</li>
+                                    <br>
+                                    <li>Pasangan minimal tentang lingkungan sekitar</li>
+                                    <br>
+                                    <li>Kalimat <i>tongue twister</i></li>
+                                    <br>
+                                    <li>Kalimat sederhana tentang lingkungan sekitar</li>
+                                    <br>
+                                    <li>Kalimat kompleks tentang lingkungan sekitar</li>
+                                </ol>
+                                </p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h3 class="card-title">Unit 8 Liburan</h3>
-                            <p class="card-text">
-                            <ol type="a" class="px-3">
-                                <li>Pengenalan kosakata tentang liburan</li>
-                                <br>
-                                <li>Pasangan minimal liburan</li>
-                                <br>
-                                <li>Kalimat <i>tongue twister</i></li>
-                                <br>
-                                <li>Kalimat sederhana tentang liburan</li>
-                                <br>
-                                <li>Kalimat kompleks tentang liburan</li>
-                                <br>
-                                <li>Percakapan sederhana tentang liburan</li>
-                            </ol>
-                            </p>
+                    <a href="unit-8.html" class="text-black">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3 class="card-title">Unit 8 Liburan</h3>
+                                <p class="card-text">
+                                <ol type="a" class="px-3">
+                                    <li>Pengenalan kosakata tentang liburan</li>
+                                    <br>
+                                    <li>Pasangan minimal liburan</li>
+                                    <br>
+                                    <li>Kalimat <i>tongue twister</i></li>
+                                    <br>
+                                    <li>Kalimat sederhana tentang liburan</li>
+                                    <br>
+                                    <li>Kalimat kompleks tentang liburan</li>
+                                    <br>
+                                    <li>Percakapan sederhana tentang liburan</li>
+                                </ol>
+                                </p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
+        </div>
+        <div class="text-center mb-100">
+            <a href="evaluation.html"><button type="button" class="btn btn-primary h-100 w-350 fs-30">Refleksi dan Evaluasi</button></a>
         </div>
     </section>
 </body>
